Overhaul difficulty, run tools

--- a/_main.cfg
+++ b/_main.cfg
@@ -30,11 +30,10 @@
     version={~add-ons/The_Dark_Hordes/metatags/VERSION}
     abbrev= _ "TDH"
 
-    {CAMPAIGN_DIFFICULTY BEGINNER  "data/add-ons/The_Dark_Hordes/images/units/initiate.png~RC(magenta>red)"    ( _ "Seeker") ( _ "Beginner")}
-    {CAMPAIGN_DIFFICULTY EASY      "data/add-ons/The_Dark_Hordes/images/units/deathmaster.png~RC(magenta>red)" ( _ "Walker") ( _ "Easy")}
-    {CAMPAIGN_DIFFICULTY NORMAL    "data/add-ons/The_Dark_Hordes/images/units/grimreaper.png~RC(magenta>red)"  ( _ "Master") ( _ "Normal")} {DEFAULT_DIFFICULTY}
-    {CAMPAIGN_DIFFICULTY HARD      "data/add-ons/The_Dark_Hordes/images/units/demilich.png~RC(magenta>red)"    ( _ "Reaper") ( _ "Hard")}
-    {CAMPAIGN_DIFFICULTY NIGHTMARE "data/add-ons/The_Dark_Hordes/images/units/dread-lich.png~RC(magenta>red)"  ( _ "Keeper") ( _ "Nightmare")}
+    {CAMPAIGN_DIFFICULTY EASY      "data/add-ons/The_Dark_Hordes/images/units/initiate.png~RC(magenta>red)"    ( _ "Seeker") ( _ "Easy")}
+    {CAMPAIGN_DIFFICULTY NORMAL    "data/add-ons/The_Dark_Hordes/images/units/deathmaster.png~RC(magenta>red)" ( _ "Walker") ( _ "Normal")} {DEFAULT_DIFFICULTY}
+    {CAMPAIGN_DIFFICULTY HARD      "data/add-ons/The_Dark_Hordes/images/units/demilich.png~RC(magenta>red)"    ( _ "Master") ( _ "Hard")}
+    {CAMPAIGN_DIFFICULTY NIGHTMARE "data/add-ons/The_Dark_Hordes/images/units/dread-lich.png~RC(magenta>red)"  ( _ "Reaper") ( _ "Nightmare")}
 
     name= _ "The Dark Hordes"+"
 "+{PART_SUBTITLE}
@@ -79,40 +78,6 @@
     path=data/campaigns/The_Rise_Of_Wesnoth
 [/binary_path]
 
-#define TDH_QUANTITY NAME BEGINNER_VALUE EASY_VALUE NORMAL_VALUE HARD_VALUE NIGHTMARE_VALUE
-#ifdef BEGINNER
-    {NAME}={BEGINNER_VALUE}
-#endif
-
-#ifdef EASY
-    {NAME}={EASY_VALUE}
-#endif
-
-#ifdef NORMAL
-    {NAME}={NORMAL_VALUE}
-#endif
-
-#ifdef HARD
-    {NAME}={HARD_VALUE}
-#endif
-
-#ifdef NIGHTMARE
-    {NAME}={NIGHTMARE_VALUE}
-#endif
-#enddef
-
-#define TDH_TURNS BEGINNER_AMOUNT EASY_AMOUNT NORMAL_AMOUNT HARD_AMOUNT NIGHTMARE_AMOUNT
-    {TDH_QUANTITY turns {BEGINNER_AMOUNT} {EASY_AMOUNT} {NORMAL_AMOUNT} {HARD_AMOUNT} {NIGHTMARE_AMOUNT}}
-#enddef
-
-#define TDH_GOLD BEGINNER_AMOUNT EASY_AMOUNT NORMAL_AMOUNT HARD_AMOUNT NIGHTMARE_AMOUNT
-    {TDH_QUANTITY gold {BEGINNER_AMOUNT} {EASY_AMOUNT} {NORMAL_AMOUNT} {HARD_AMOUNT} {NIGHTMARE_AMOUNT}}
-#enddef
-
-#define TDH_INCOME BEGINNER_AMOUNT EASY_AMOUNT NORMAL_AMOUNT HARD_AMOUNT NIGHTMARE_AMOUNT
-    {TDH_QUANTITY income {BEGINNER_AMOUNT} {EASY_AMOUNT} {NORMAL_AMOUNT} {HARD_AMOUNT} {NIGHTMARE_AMOUNT}}
-#enddef
-
 {~add-ons/The_Dark_Hordes/mainline-strings.cfg}
 {~add-ons/The_Dark_Hordes/macros}
 
@@ -131,9 +96,9 @@
 [/binary_path]
 
 [editor_group]
-    id=wesnoth-UMC-The_Dark_Hordes
-    name= _ "The Dark Hordes (custom terrains)"
-    icon="group_custom"
+    id=The_Dark_Hordes
+    name= _ "The Dark Hordes"
+    icon=group_custom
 [/editor_group]
 
 {~add-ons/The_Dark_Hordes/macros/terrain.cfg}
