--- a/about.cfg
+++ b/about.cfg
@@ -45,6 +45,6 @@
         name="Refumee"
     [/entry]
     [entry]
-        name="Tahsin Jahin Khalid (Lord-Knightmare)"
+        name="Tahsin Jahin Khalid (Lord-Knightmare)" # wmllint: ignore
     [/entry]
 [/about]
