--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -5,7 +5,7 @@
     name= _ "A New Chance"
     next_scenario=02_Brother_Against_Brother
     map_file=01_A_New_Chance.map
-    {TDH_TURNS 38 34 30 26 22}
+    {TURNS4 38 34 30 26}
     {DEFAULT_SCHEDULE_DUSK}
 
     {STORYTXT_INTRO}
@@ -22,8 +22,8 @@
         canrecruit=yes
         controller=human
         recruit=Walking Corpse,Skeleton,Skeleton Archer,Ghost
-        {TDH_GOLD 180 160 140 120 100}
-        {TDH_INCOME 8 6 4 2 0}
+        {GOLD4 160 140 120 100}
+        {INCOME4 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=se
         fog=yes
@@ -44,7 +44,7 @@
         [/ai]
 
         recruit=Naga Fighter
-        {TDH_GOLD 0 20 40 60 80}
+        {GOLD4 20 40 60 80}
         team_name=enemies
         user_team_name= _ "team_name^Xabrak"
         facing=ne
@@ -68,8 +68,8 @@
         [/ai]
 
         recruit=Young Ogre,Troll Whelp
-        {TDH_GOLD 0 20 40 60 80}
-        {TDH_INCOME 0 2 4 6 8}
+        {GOLD4 20 40 60 80}
+        {INCOME4 2 4 6 8}
         team_name=enemies
         user_team_name= _ "team_name^Grakarat"
         facing=sw
@@ -165,7 +165,7 @@
             x=$unit.x
             y=$unit.y
             facing=$unit.facing
-            {TDH_QUANTITY experience 34 26 18 10 2}
+            {QUANTITY4 experience 34 26 18 10}
             side=1
             overwrite=yes
             [modifications]
