--- a/scenarios/05_Inside_The_Tower.cfg
+++ b/scenarios/05_Inside_The_Tower.cfg
@@ -6,7 +6,7 @@
     next_scenario=06_Crelanus_Book
     victory_when_enemies_defeated=no
     map_file=05_Inside_The_Tower.map
-    {TDH_TURNS 54 50 46 40 34}
+    {TURNS4 54 50 46 40}
     {UNDERGROUND}
 
     {SCENARIO_MUSIC snowfall.ogg}
@@ -47,8 +47,8 @@
         [/ai]
 
         recruit=Mage
-        {TDH_GOLD -10 0 10 20 30}
-        {TDH_INCOME -2 0 2 4 6}
+        {GOLD4 0 10 20 30}
+        {INCOME4 2 4 6 8}
         user_team_name= _ "team_name^Magi"
         facing=sw
         {FLAG_VARIANT loyalist}
