--- a/scenarios/07_Confrontation.cfg
+++ b/scenarios/07_Confrontation.cfg
@@ -6,7 +6,7 @@
     next_scenario=08_Underground_Pool
     victory_when_enemies_defeated=no
     map_file=07_Confrontation.map
-    {TDH_TURNS 28 26 24 20 18}
+    {TURNS4 28 26 24 22}
     {DEFAULT_SCHEDULE_DAWN}
 
     {STORYTXT_CONFRONTATION}
@@ -22,8 +22,8 @@
         side=1
         canrecruit=yes
         controller=human
-        {TDH_GOLD 180 160 140 120 100}
-        {TDH_INCOME 8 6 4 2 0}
+        {GOLD4 160 140 120 100}
+        {INCOME4 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=sw
         {FLAG_VARIANT undead}
@@ -43,8 +43,8 @@
         [/ai]
 
         recruit=Mage,Cavalryman,Fencer,Bowman,Spearman
-        {TDH_GOLD 150 200 250 300 350}
-        {TDH_INCOME 10 15 20 25 30}
+        {GOLD4 200 250 300 350}
+        {INCOME4 10 15 20 25}
         team_name=mages
         user_team_name= _ "team_name^Wesnothians"
         facing=se
