--- a/scenarios/12_Assault_on_Alduin.cfg
+++ b/scenarios/12_Assault_on_Alduin.cfg
@@ -5,7 +5,7 @@
     name= _ "Assault on Alduin"
     next_scenario=13_Fear_the_Unliving
     map_file=12_Assault_on_Alduin.map
-    {TDH_TURNS 40 36 32 28 24}
+    {TURNS4 40 36 32 28}
     {DEFAULT_SCHEDULE_SECOND_WATCH}
 
     {INTRO_AND_SCENARIO_MUSIC the_dangerous_symphony.ogg loyalists.ogg}
@@ -27,8 +27,8 @@
         side=1
         canrecruit=yes
         controller=human
-        {TDH_GOLD 180 160 140 120 100}
-        {TDH_INCOME 8 6 4 2 0}
+        {GOLD4 180 160 140 120}
+        {INCOME4 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=se
         fog=yes
@@ -48,15 +48,17 @@
         [/ai]
 
         recruit=Red Mage,White Mage,Mage
-        {TDH_GOLD 60 80 100 120 140}
-        {TDH_INCOME 0 2 4 6 8}
+        {GOLD4 80 100 120 140}
+        {INCOME4 2 4 6 8}
         team_name=mages
         user_team_name= _ "team_name^Magi"
         {FLAG_VARIANT loyalist}
 
+#ifndef EASY
         {LOYAL_GUARD_UNIT 3 (Red Mage) 11 5}
         {LOYAL_GUARD_UNIT 3 (Red Mage) 18 5}
         {LOYAL_GUARD_UNIT 3 (Red Mage) 9 38}
+#endif
 
         {LOYAL_GUARD_UNIT 3 (Mage) 13 18}
         {LOYAL_GUARD_UNIT 3 (Mage) 21 14}
@@ -82,8 +84,8 @@
         [/ai]
 
         recruit=White Mage,Mage
-        {TDH_GOLD 60 80 100 120 140}
-        {TDH_INCOME 0 2 4 6 8}
+        {GOLD4 60 80 100 120}
+        {INCOME4 0 2 4 6}
         team_name=mages
         user_team_name= _ "team_name^Magi"
         {FLAG_VARIANT loyalist}
@@ -103,8 +105,8 @@
         [/ai]
 
         recruit=Red Mage,Mage
-        {TDH_GOLD 60 80 100 120 140}
-        {TDH_INCOME 0 2 4 6 8}
+        {GOLD4 60 80 100 120}
+        {INCOME4 2 4 6 8}
         team_name=mages
         user_team_name= _ "team_name^Magi"
         {FLAG_VARIANT loyalist}
@@ -123,8 +125,8 @@
         [/ai]
 
         recruit=Red Mage,White Mage,Mage
-        {TDH_GOLD 60 80 100 120 140}
-        {TDH_INCOME 0 2 4 6 8}
+        {GOLD4 60 80 100 120}
+        {INCOME4 2 4 6 8}
         team_name=mages
         user_team_name= _ "team_name^Magi"
         {FLAG_VARIANT loyalist}
@@ -217,6 +219,7 @@
 
     [event]
         name=enemies defeated
+
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "Search again for any of their survivors. I need to kill all the dogs of the council for the march. It would not be good for me if Wesnoth knew of my assault..."
