--- a/scenarios/18_Showdown_in_the_Shadows.cfg
+++ b/scenarios/18_Showdown_in_the_Shadows.cfg
@@ -41,7 +41,7 @@
         [/ai]
 
         recruit=Revenant,Bone Shooter,Wraith
-        {TDH_GOLD 100 150 200 250 300}
+        {GOLD4 150 200 250 300}
         income=-2
         user_team_name= _ "team_name^Morgorath"
         {FLAG_VARIANT undead}
@@ -101,7 +101,7 @@
 #endif
 
         [unit]
-            type=Revenant
+            type=Death Knight
             id=Tanar
             name= _ "Tanar"
             x,y=16,19
@@ -455,7 +455,7 @@
         [modify_side]
             side=2
             hidden=no
-            {TDH_INCOME 0 4 8 12 16}
+            {INCOME4 4 8 12 16}
         [/modify_side]
 
         {DELAY 2000}
@@ -465,7 +465,6 @@
         [/scroll_to_unit]
 
         {APPEND_MUSIC in_the_land_of_madness.ogg}
-        {APPEND_MUSIC vengeful.ogg}
         {APPEND_MUSIC vengeful.ogg}
 
         [redraw]
