--- a/scenarios/02_Brother_Against_Brother.cfg
+++ b/scenarios/02_Brother_Against_Brother.cfg
@@ -5,7 +5,7 @@
     name= _ "Brother Against Brother"
     next_scenario=03_Skull_of_Morgorath
     map_file=02_Brother_Against_Brother.map
-    {TDH_TURNS 30 28 26 24 22}
+    {TURNS4 28 26 24 22}
     {DAWN}
     {DAWN}
     {MORNING}
@@ -38,8 +38,8 @@
         side=1
         canrecruit=yes
         controller=human
-        {TDH_GOLD 180 160 140 120 100}
-        {TDH_INCOME 8 6 4 2 0}
+        {GOLD4 160 140 120 100}
+        {INCOME4 8 6 4 2}
         user_team_name= _ "team_name^Gwiti"
         facing=ne
         {FLAG_VARIANT undead}
@@ -61,8 +61,8 @@
         [/ai]
 
         recruit=Dark Adept,Ghost,Walking Corpse,Vampire Bat,Skeleton,Skeleton Archer
-        {TDH_GOLD 80 100 120 140 160}
-        {TDH_INCOME 4 6 8 10 12}
+        {GOLD4 100 120 140 160}
+        {INCOME4 4 6 8 10}
         user_team_name= _ "team_name^Nati"
         facing=sw
         {FLAG_VARIANT undead}
@@ -151,7 +151,7 @@
         [/message]
         [gold]
             side=2
-            {TDH_QUANTITY amount 0 20 40 60 80}
+            {QUANTITY4 amount 20 40 60 80}
         [/gold]
     [/event]
     [event]
