--- a/scenarios/08_Underground_Pool.cfg
+++ b/scenarios/08_Underground_Pool.cfg
@@ -6,7 +6,7 @@
     next_scenario=09_Underground_River
     victory_when_enemies_defeated=no
     map_file=08_Underground_Pool.map
-    {TDH_TURNS 46 42 38 34 30}
+    {TURNS4 46 42 38 34}
     {UNDERGROUND}
 
     {INTRO_AND_SCENARIO_MUSIC revelation.ogg underground.ogg}
@@ -27,8 +27,8 @@
         side=1
         canrecruit=yes
         controller=human
-        {TDH_GOLD 160 140 120 100 80}
-        {TDH_INCOME 8 6 4 2 0}
+        {GOLD4 160 140 120 100}
+        {INCOME4 8 6 4 2}
         user_team_name= _ "team_name^Gwiti"
         facing=nw
         shroud=yes
@@ -49,8 +49,8 @@
         [/ai]
 
         recruit=Dwarvish Ulfserker
-        {TDH_GOLD 0 10 20 30 40}
-        {TDH_INCOME 2 4 6 8 10}
+        {GOLD4 10 20 30 40}
+        {INCOME4 2 4 6 8}
         team_name=enemies
         user_team_name= _ "team_name^Dwarves"
         facing=se
@@ -75,15 +75,20 @@
         [/ai]
 
         recruit=Dwarvish Fighter,Dwarvish Thunderer
-        {TDH_GOLD -10 0 10 20 30}
-        {TDH_INCOME 0 2 4 6 8}
+        {GOLD4 0 10 20 30}
+        {INCOME4 2 4 6 8}
         team_name=enemies
         user_team_name= _ "team_name^Dwarves"
         facing=se
         {FLAG_VARIANT knalgan}
 
+#ifdef EASY
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 15 17}
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 23 10}
+#else
         {LOYAL_GUARD_UNIT 3 (Dwarvish Steelclad) 15 17}
         {LOYAL_GUARD_UNIT 3 (Dwarvish Steelclad) 23 10}
+#endif
 
         {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 26 16}
         {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 18 17}
