--- a/scenarios/09_Underground_River.cfg
+++ b/scenarios/09_Underground_River.cfg
@@ -22,8 +22,8 @@
         side=1
         canrecruit=yes
         controller=human
-        {TDH_GOLD 180 160 140 120 100}
-        {TDH_INCOME 8 6 4 2 0}
+        {GOLD4 160 140 120 100}
+        {INCOME4 8 6 4 2}
         user_team_name= _ "team_name^Gwiti"
         facing=ne
         shroud=yes
@@ -45,8 +45,8 @@
         [/ai]
 
         recruit=Dwarvish Fighter,Dwarvish Guardsman,Dwarvish Thunderer,Dwarvish Ulfserker
-        {TDH_GOLD 40 60 80 100 120}
-        {TDH_INCOME 0 10 20 30 40}
+        {GOLD4 40 60 80 100}
+        {INCOME4 0 10 20 30}
         user_team_name= _ "team_name^Dwarves"
         facing=sw
         {FLAG_VARIANT knalgan}
@@ -80,8 +80,8 @@
         [/ai]
 
         recruit=Naga Fighter,Naga Warrior,Naga Guard,Naga Dirkfang
-        {TDH_GOLD 40 80 120 160 200}
-        {TDH_INCOME 0 10 20 30 40}
+        {GOLD4 40 80 120 160}
+        {INCOME4 0 10 20 30}
         user_team_name= _ "team_name^Naga"
         facing=nw
         {FLAG_VARIANT6 ragged}
@@ -159,7 +159,7 @@
         name=side 3 turn refresh
         first_time_only=no
 
-        {RANDOM 3,4}
+        {RANDOM 3,4,5}
 
         [modify_unit]
             [filter]
