--- a/scenarios/16_At_the_End_of_Blood.cfg
+++ b/scenarios/16_At_the_End_of_Blood.cfg
@@ -6,7 +6,7 @@
     next_scenario=17_Revelations
     victory_when_enemies_defeated=no
     map_file=16_At_the_End_of_Blood.map
-    {TDH_TURNS 36 34 32 30 28}
+    {TURNS4 36 34 32 30}
     {DEFAULT_SCHEDULE_FIRST_WATCH}
 
     {STORYTXT_AT_THE_END_OF_BLOOD}
@@ -24,8 +24,8 @@
         side=1
         canrecruit=yes
         controller=human
-        {TDH_GOLD 180 160 140 120 100}
-        {TDH_INCOME 6 4 2 0 -2}
+        {GOLD4 160 140 120 100}
+        {INCOME4 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=ne
         fog=yes
@@ -42,8 +42,8 @@
         [/ai]
 
         recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Goblin Spearman,Troll Whelp,Wolf Rider
-        {TDH_GOLD 140 160 180 200 220}
-        {TDH_INCOME 0 2 4 6 8}
+        {GOLD4 140 160 180 200}
+        {INCOME4 0 2 4 6}
         user_team_name= _ "team_name^Tanar"
         facing=sw
         {FLAG_VARIANT6 ragged}
@@ -62,8 +62,8 @@
         [/ai]
 
         recruit=Footpad,Poacher,Thug
-        {TDH_GOLD 80 100 140 180 220}
-        {TDH_INCOME 0 2 4 6 8}
+        {GOLD4 100 140 180 220}
+        {INCOME4 2 4 6 8}
         user_team_name= _ "team_name^Elynia"
         facing=sw
         {FLAG_VARIANT6 ragged}
