--- a/scenarios/17_Revelations.cfg
+++ b/scenarios/17_Revelations.cfg
@@ -5,7 +5,7 @@
     name= _ "Revelations"
     next_scenario=18_Showdown_in_the_Shadows
     map_file=17_Revelations.map
-    {TDH_TURNS 42 38 34 30 26}
+    {TURNS4 38 34 30 26}
     {DEFAULT_SCHEDULE_DUSK}
 
     {STORYTXT_REVELATIONS}
@@ -24,8 +24,8 @@
         side=1
         canrecruit=yes
         controller=human
-        {TDH_GOLD 180 160 140 120 100}
-        {TDH_INCOME 8 6 4 2 0}
+        {GOLD4 180 160 140 120}
+        {INCOME4 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=nw
         {FLAG_VARIANT undead}
@@ -46,8 +46,8 @@
         [/ai]
 
         recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Rider,Elvish Shaman,Elvish Druid,Elvish Sorceress
-        {TDH_GOLD 100 140 180 220 260}
-        {TDH_INCOME 2 6 10 14 18}
+        {GOLD4 140 180 220 260}
+        {INCOME4 2 6 10 14}
         team_name=elves
         user_team_name= _ "team_name^Elynia"
         facing=se
@@ -68,8 +68,8 @@
         [/ai]
 
         recruit=Cavalryman,Swordsman,Mage,Fencer,Duelist,Longbowman
-        {TDH_GOLD 80 100 140 180 220}
-        {TDH_INCOME 2 6 10 14 18}
+        {GOLD4 80 100 140 180}
+        {INCOME4 6 10 14 18}
         team_name=elves
         user_team_name= _ "team_name^Wesnothians"
         facing=sw
@@ -90,8 +90,8 @@
         [/ai]
 
         recruit=Cavalryman,Swordsman,Mage,Fencer,Duelist,Longbowman
-        {TDH_GOLD 100 140 180 220 260}
-        {TDH_INCOME 2 6 10 14 18}
+        {GOLD4 100 140 180 220}
+        {INCOME4 2 6 10 14}
         team_name=elves
         user_team_name= _ "team_name^Wesnothians"
         facing=se
@@ -167,6 +167,8 @@
             speaker=Prince Legyn
             message= _ "Now is the time to end it all. To arms!"
         [/message]
+
+        {APPEND_MUSIC loyalists.ogg}
     [/event]
 
     [event]
@@ -249,12 +251,6 @@
             speaker="Gwiti Ha'atel"
             message= _ "I fall. As I said, I’m making sure... that the other will live forever. I curse you to see your efforts be destroyed by the pass of time. I curse you to see the world dry up and die. You will see how each of your beloved ones passes away with great pain, and you will want to have never messed with me."
         [/message]
-
-        [floating_text]
-            x=$x1
-            y=$y1
-            text= _ "cursed"
-        [/floating_text]
 
         [message]
             speaker="Gwiti Ha'atel"
