--- a/scenarios/17_Revelations.cfg
+++ b/scenarios/17_Revelations.cfg
@@ -231,6 +231,10 @@
             [/modify_unit]
         )}
 
+        [scroll_to_unit]
+            id="Gwiti Ha'atel"
+        [/scroll_to_unit]
+
         [harm_unit]
             [filter]
                 id="Gwiti Ha'atel"
@@ -245,11 +249,11 @@
         [/message]
         [message]
             speaker=unit
-            message= _ "Now your evil is over. By my hand, your undeath is destroyed."
+            message= _ "Now your evil is over. By my power of light, your undeath is destroyed."
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "I fall. As I said, I’m making sure... that the other will live forever. I curse you to see your efforts be destroyed by the pass of time. I curse you to see the world dry up and die. You will see how each of your beloved ones passes away with great pain, and you will want to have never messed with me."
+            message= _ "I fall. As I said, I am making sure... that the other will live forever. I curse you to see your efforts be destroyed by the pass of time. I curse you to see the world dry up and die. You will see how each of your beloved ones passes away with great pain, and you will want to have never messed with me."
         [/message]
 
         [message]
