--- a/scenarios/18_Showdown_in_the_Shadows.cfg
+++ b/scenarios/18_Showdown_in_the_Shadows.cfg
@@ -46,9 +46,15 @@
         user_team_name= _ "team_name^Morgorath"
         {FLAG_VARIANT undead}
 
+#ifdef EASY
         {LOYAL_GUARD_UNIT 2 (Walking Corpse) 14 8}
         {LOYAL_GUARD_UNIT 2 (Walking Corpse) 4 10}
         {LOYAL_GUARD_UNIT 2 (Walking Corpse) 9 17}
+#else
+        {LOYAL_GUARD_UNIT 2 (Soulless) 14 8}
+        {LOYAL_GUARD_UNIT 2 (Soulless) 4 10}
+        {LOYAL_GUARD_UNIT 2 (Soulless) 9 17}
+#endif
 
         [unit]
             type=Revenant
@@ -114,6 +120,12 @@
 
         [kill]
             id="Gwiti Ha'atel"
+            fire_event=no
+            animate=no
+        [/kill]
+
+        [kill]
+            id="Arkal-Thil"
             fire_event=no
             animate=no
         [/kill]
@@ -313,33 +325,6 @@
     [/event]
 
     [event]
-        name=turn 8
-        [message]
-            speaker=narrator
-            caption= _ "Leganoth"
-            message= _ "You never could have beaten her. You know why? Because you have the power of Crelanu, and she, the child of Crelanu, has it too."
-            image=misc/blank-hex.png
-        [/message]
-        [message]
-            speaker="Gwiti Ha'atel"
-            message= _ "You lied; Crelanu died long ago, shortly after Wesnoth was founded."
-        [/message]
-        [message]
-            speaker=narrator
-            caption= _ "Leganoth"
-            message= _ "More precisely, she has the magical blood of Crelanu from her father..."
-            image=misc/blank-hex.png
-        [/message]
-
-        {QUAKE rumble.ogg}
-
-        [message]
-            speaker="Gwiti Ha'atel"
-            message= _ "Ah, do not talk any more. I am uncomfortable to listen to what you have to say about her."
-        [/message]
-    [/event]
-
-    [event]
         name=turn 10
 
         {QUAKE rumble.ogg}
@@ -399,7 +384,7 @@
         [message]
             speaker=narrator
             caption= _ "Leganoth"
-            message= _ "I was his servant. And I carried out everything to save him."
+            message= _ "I was his comrade. And I carried out everything to save him."
             image=misc/blank-hex.png
         [/message]
 
