--- a/scenarios/18_Showdown_in_the_Shadows.cfg
+++ b/scenarios/18_Showdown_in_the_Shadows.cfg
@@ -496,6 +496,30 @@
     [/event]
 
     [event]
+        name=side 1 turn
+        first_time_only=no
+
+        [filter_condition]
+            [have_unit]
+                id=Morgorath
+            [/have_unit]
+        [/filter_condition]
+
+        {FLASH_RED ()}
+
+        [harm_unit]
+            [filter]
+                side=1
+            [/filter]
+            [filter_second]
+                id=Morgorath
+            [/filter_second]
+            {QUANTITY4 amount 1 2 3 4}
+            damage_type=arcane
+        [/harm_unit]
+    [/event]
+
+    [event]
         name=last breath
         [filter]
             id="Gwiti Ha'atel"
