Change music selection

--- a/scenarios/07_Confrontation.cfg
+++ b/scenarios/07_Confrontation.cfg
@@ -209,6 +209,7 @@
             id="Gwiti Ha'atel"
         [/scroll_to_unit]
 
+        {APPEND_MUSIC the_high_kings_march.ogg}
         {APPEND_MUSIC vengeful.ogg}
 
         [objectives]
