--- a/scenarios/15_The_Crown_Prince.cfg
+++ b/scenarios/15_The_Crown_Prince.cfg
@@ -277,6 +277,7 @@
         {MODIFY_UNIT (id=Morgorath) side 3}
         {DELAY 250}
 
+        {APPEND_MUSIC in_the_land_of_madness.ogg}
         {APPEND_MUSIC vengeful.ogg}
 
         [message]
