--- a/scenarios/14_A_Fated_Clash.cfg
+++ b/scenarios/14_A_Fated_Clash.cfg
@@ -48,7 +48,7 @@
         [/ai]
 
         recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Rider,Elvish Shaman,Elvish Druid,Elvish Sorceress
-        {GOLD4 160 200 240 280}
+        {GOLD4 180 220 260 300}
         {INCOME4 10 30 50 70}
         team_name=elves
         user_team_name= _ "team_name^Elynia"
@@ -69,7 +69,7 @@
         [/ai]
 
         recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Rider,Elvish Shaman,Elvish Druid,Elvish Sorceress
-        {GOLD4 140 180 220 260}
+        {GOLD4 160 200 240 280}
         {INCOME4 10 30 50 70}
         team_name=elves
         user_team_name= _ "team_name^Elynia"
@@ -333,7 +333,7 @@
 
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "Farewell, child who endured Crelanu."
+            message= _ "Farewell, one who endured Crelanu."
             scroll=no
         [/message]
 
